third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/multiple_catch_all_same_variant.stderr
error: Multiple variants marked with `#[num_enum(catch_all)]`
 --> tests/try_build/compile_fail/multiple_catch_all_same_variant.rs:6:16
  |
6 |     #[num_enum(catch_all)]
  |                ^^^^^^^^^
